Login and Participant registration -good handshake-

--- a/web/registration.html
+++ b/web/registration.html
@@ -59,19 +59,16 @@
 							<div class="form-group">
                                 <input type="text" class="form-control" name="lname" placeholder="Efternavn">
                             </div>
-			    <div class="form-group">
+							<div class="form-group">
+                                <input type="email" class="form-control" name="email" required="" placeholder="Email">
+                            </div>
+				<div class="form-group">
+				Vælg aldersgruppe:
                                 <select name="age">
                                 	<option value="1"> 0-6 år </option>
 					<option value="2"> 7-12 år </option>
 					<option value="3"> 13-18 år </option>
                                 </select>
-                            </div>
-			    <div class="form-group">
-                                <input type="email" class="form-control" name="email" required="" placeholder="Email">
-                            </div>
-                            
-                            <div class="form-group">
-                                <textarea class="form-control" name="message" placeholder="Message" rows="7"></textarea>
                             </div>
                             <div class="mbr-buttons mbr-buttons--right">
                                 <button type="submit" class="mbr-buttons__btn btn btn-lg btn-danger">TILMELD</button>
