--- a/web/index.html
+++ b/web/index.html
@@ -61,7 +61,7 @@
                     <div class="image"><a href="livescore.html"><img class="undefined" src="assets/images/clipboard-315x315-61.jpg"></a></div>
                     <div class="caption">
                         <div>
-                            <h3>SKRIVERLISTE</h3>
+                            <h3>STILLINGEN LIGE NU</h3>
                             
                         </div>
                         
