--- a/web/winners.html
+++ b/web/winners.html
@@ -25,7 +25,7 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="index.html"><img class="mbr-navbar__brand-img mbr-brand__img" src="assets/images/minilogo-300x250-62.png" alt="button"></a></span>
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-black" href="http://mobirise.com">Ringridning</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-black" href="http://ringriderfesten.dk">Ringridning</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger text-white"><span class="mbr-hamburger__line"></span></div>
