--- a/web/enrollment.html
+++ b/web/enrollment.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="assets/images/minilogo-300x250-62.png" type="image/x-icon">
   <meta name="description" content="">
-  <title>Skriver side</title>
+  <title>Indskrivning</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&amp;subset=cyrillic,latin,greek,vietnamese">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/mobirise/css/style.css">
@@ -16,14 +16,14 @@
   
 </head>
 <body>
-<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-0">
+<section class="mbr-navbar mbr-navbar--freeze mbr-navbar--absolute mbr-navbar--sticky mbr-navbar--auto-collapse" id="menu-22">
     <div class="mbr-navbar__section mbr-section">
         <div class="mbr-section__container container">
             <div class="mbr-navbar__container">
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><a href="index.html"><img class="mbr-navbar__brand-img mbr-brand__img" src="assets/images/minilogo-300x250-62.png" alt="button"></a></span>
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-black" href="http://ringriderfesten.dk">Ringridning</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-black" href="http://ringriderfesten.dk">Ringridning</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger text-white"><span class="mbr-hamburger__line"></span></div>
@@ -37,40 +37,24 @@
         </div>
     </div>
 </section>
-
-<section class="content-2 col-2 mbr-after-navbar" id="features1-3" style="background-color: rgb(255, 255, 255);">
     
-    <div class="container">
-        <div class="row">
-			<div>
+  <section class="content-1 col-1 mbr-after-navbar" id="features1" style="background-color: rgb(255, 255, 255);">
+      <div>
                 <div class="thumbnail">
-                    <div class="image"><a href="webresources/moderatorservices/enrollment"><img class="undefined" src="assets/images/manage.png"></a></div>
+                    <div class="image"><a href="index.html"><img class="undefined" src="assets/images/WIP.jpg"></a></div>
                     <div class="caption">
                         <div>
-                            <h3>Indskrivning</h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div class="thumbnail">
-                    <div class="image"><a href="webresources/moderatorservices/livescore"><img class="undefined" src="assets/images/users.png"></a></div>
-                    <div class="caption">
-                        <div>
-                            <h3>Resultat skrivning</h3>
+                            <center><h3>Side under konstruktion</h3></center>
                         </div>
                     </div>
                 </div>
             </div>                     
         </div>
-    </div>
-	
-</section>
+  </section>
 
 
   <script src="assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script src="assets/smooth-scroll/SmoothScroll.js"></script>
   <script src="assets/mobirise/js/script.js"></script>
   
