polish (not the people)

--- a/web/winners.html
+++ b/web/winners.html
@@ -37,6 +37,20 @@
         </div>
     </div>
 </section>
+    
+  <section class="content-1 col-1 mbr-after-navbar" id="features1" style="background-color: rgb(255, 255, 255);">
+      <div>
+                <div class="thumbnail">
+                    <div class="image"><a href="index.html"><img class="undefined" src="assets/images/WIP.jpg"></a></div>
+                    <div class="caption">
+                        <div>
+                            <center><h3>Side under konstruktion</h3></center>
+                        </div>
+                    </div>
+                </div>
+            </div>                     
+        </div>
+  </section>
 
 
   <script src="assets/jquery/jquery.min.js"></script>
