--- a/web/admin_mainpage.html
+++ b/web/admin_mainpage.html
@@ -29,7 +29,6 @@
                 <div class="mbr-navbar__hamburger mbr-hamburger text-white"><span class="mbr-hamburger__line"></span></div>
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
-                        <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-black" href="http://mobirise.com"></a></li> </ul></div>
                         <div class="mbr-navbar__column"><ul class="mbr-navbar__items mbr-navbar__items--right mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-inverse mbr-buttons--active"><li class="mbr-navbar__item"><a class="mbr-buttons__btn btn btn-link" href="login.html">LOG IN</a></li></ul></div>
                     </nav>
                 </div>
@@ -44,7 +43,7 @@
         <div class="row">
             <div>
                 <div class="thumbnail">
-                    <div class="image"><a href="WIP.html"><img class="undefined" src="assets/images/manage.png"></a></div>
+                    <div class="image"><a href="admin_choices.html"><img class="undefined" src="assets/images/manage.png"></a></div>
                     <div class="caption">
                         <div>
                             <h3>Ringridning</h3>
