Maintaining and error finding
Fixed:
Directing issues
general Refactoring
gallowchoice index relatively fixed (1Based vs. 0-based)
Admin CRUD options redirected to WIP page.
Dead enrollment code deleted
Issue with getting lists while event not being active
Checking for open registration before having the ability to register (in
index.html) + (created registration_closed.html)

--- a/web/admin_user_admin.html
+++ b/web/admin_user_admin.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div>
                 <div class="thumbnail">
-                    <div class="image"><a href="registration.html"><img class="undefined" src="assets/images/Cuser.png"></a></div>
+                    <div class="image"><a href="WIP.html"><img class="undefined" src="assets/images/Cuser.png"></a></div>
                     <div class="caption">
                         <div>
                             <h3>Opret bruger</h3>
@@ -53,7 +53,7 @@
             </div>
             <div>
                 <div class="thumbnail">
-                    <div class="image"><a href="webresources/userservices/livescore"><img class="undefined" src="assets/images/Ruser.jpg"></a></div>
+                    <div class="image"><a href="WIP.html"><img class="undefined" src="assets/images/Ruser.jpg"></a></div>
                     <div class="caption">
                         <div>
                             <h3>Find bruger</h3>
@@ -65,7 +65,7 @@
             </div>
             <div>
                 <div class="thumbnail">
-                    <div class="image"><a href="winners.html"><img class="undefined" src="assets/images/Uuser.jpg"></a></div>
+                    <div class="image"><a href="WIP.html"><img class="undefined" src="assets/images/Uuser.jpg"></a></div>
                     <div class="caption">
                         <div>
                             <h3>Opdater bruger</h3>
@@ -78,7 +78,7 @@
             
 			<div>
                 <div class="thumbnail">
-                    <div class="image"><a href="winners.html"><img class="undefined" src="assets/images/Duser.png"></a></div>
+                    <div class="image"><a href="WIP.html"><img class="undefined" src="assets/images/Duser.png"></a></div>
                     <div class="caption">
                         <div>
                             <h3>Slet bruger</h3>
